# actix_graphql_starter

./: Cargo.toml  README.md  docker-compose.yml
migrations/2023-04-22-140434_create_user/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs  utils.rs
src/handlers/: graphql.rs  mod.rs
src/mailer/: elastic.rs  mod.rs
src/middlewares/: auth.rs
src/models/: users.rs
src/repositories/: user.rs
templates/: base.html
templates/emails/: password-reset.html  register.html
